--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mehul's Portfolio | Software Developer | Tech Blogger </title>
+    <title>Pavan's Portfolio | Software Developer</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Mehul's Portfolio | Software Developer | Tech Blogger. My personal Portfolio Made using Angular." />
-    <meta name="keywords" content="portfolio, Angular, Personal Portfolio, Mehul kothari, mehulk05, MEHUL KOTHARI, mehul kothari,">
-    <meta property="og:title" content="Mehul's Portfolio | Software Developer | Tech Blogger " />
+    <meta name="description" content="Pavan's Portfolio | Software Developer. My Personal Portfolio Built on Angular." />
+    <meta name="keywords" content="portfolio, Angular, Personal Portfolio, Pavan Kollimarla, pakollimar, PAVAN KOLLIMARLA, pavan kollimarla,">
+    <meta property="og:title" content="Mehul's Portfolio | Software Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://personal-portfolio-angular-updated.vercel.app" />
     <meta property="og:image" content="https://personal-portfolio-angular-updated.vercel.app/assets/images/portfolio1.PNG" />
     <meta data-rh="true" property="og:url" content="https://mehul-kothari.vercel.app/">
     <meta data-rh="true" property="al:web:url" content="https://mehul-kothari.vercel.app/">
-    <meta property="og:description" content="Mehul's Portfolio | Software Developer | Tech Blogger. My personal Portfolio Made using Angular." />
+    <meta property="og:description" content="Mehul's Portfolio | Software Developer. My Personal Portfolio BUilt on Angular." />
     <meta data-rh="true" name="twitter:image:src" content="https://personal-portfolio-angular-updated.vercel.app/assets/images/portfolio1.PNG">
-    <meta property="article:author" content="https://mehulkothari05.medium.com">
-    <meta name="twitter:creator" content="@Mehulk2011">
     <meta name="robots" content="index,follow,max-image-preview:large">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="./assets/css/aos.css" rel="stylesheet">
